deploy/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
---
apiVersion: v1
kind: Namespace
metadata:
  name: application
  labels:
    name: application
