deploy/k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: application
  labels:
    app: frontend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1 
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secrets
      containers:
        - name: credit-card
          image: ghcr.io/N-H-A-M/devops:backend
          ports:
            - containerPort: 8000
